--- a/application/views/scripts/about/index.phtml
+++ b/application/views/scripts/about/index.phtml
@@ -1,32 +1,121 @@
 <section  class="container container-website col-lg-10 col-lg-offset-1">
 	<div class="black-box col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
+		<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+		<div class="rub">
+			<h3 class="col-lg-12 title-rub">تعريف</h3>
+		</div>
+		<?php } else { ?>
 		<div class="rub">
 			<h3 class="col-lg-12 title-rub">BIOGRAPHIE</h3>
 		</div>
+		<?php } ?>
 	</div>
 	<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
 		<div class="about">
 			<img src="images/biographie.jpg" width="100%"/>
-			<p>Quae dum ita struuntur, indicatum est apud Tyrum indumentum regale textum occulte, incertum quo locante vel cuius usibus apparatum. ideoque rector provinciae tunc pater Apollinaris eiusdem nominis ut conscius ductus est aliique congregati sunt ex diversis civitatibus multi, qui atrocium criminum ponderibus urgebantur.</p>
+			<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+			<h2 style="direction: rtl !important; color: #d14e3d;">."فاتن بنعكيدة"  جوهرة مدينة الخميسات و مفخرة منطقة الأطلس و البلد بأكمله</h2>
+			<p>الطموح، المثابرة و الإصرار على النجاح، ثلاثية  كانت دعامة الفنانة "فاتن" لتحقيق طموحاتها في الحياة.</p>
+			<p>	فاطمة الزهراء بنعكيدا هو إسمها الحقيقي، فنانة مغربية الأصل والهوية ولدت وترعرعت بمدينة الخميسات  القلب النابض لمنطقة الأطلس. 
+			  في النّور،رأت5  الأنشطة خلال من ثم أظافرها... نعومة منذ قرآنية  لآيات ترتيلها خلال من الصوتية قدراتها أولى اكتشفت  ، مارس
+			المدرسية: المسرح، الغناء.....احترافها للفن يظهر شيئا فشيئا، خاصة عند أدائها لأغاني عمالقة الفن: أم كلثوم، فيروز، وردة... 
+			  و أحيانا الإحباط يلازمها فيه، تشارك أن دون الكرام مرور يمر فاتن" تتركه" القبيل هذا من شيئ لا فنية.. مسابقات أو حفلات أكانتسواء
+			برنامج "أضواء المدينة "الذي قدمه "إدريس التاديلي"،كان أول فرصة لها لإسماع صوتها فغنت "للصبر حدود" لكوكب الشرق أم كلثوم . 
+			  يا عارك في أغنيتها"أنا رأفت لطيفة للفنانة غنت ، معجبيها دائرة من لتوسِّع "لفاتن" أخرى فرصة  التنمية" قافلة " التلفزي البرنامجكان
+			لكن الفرح يكون سيد الموقف، لتتفاجأ بجمهورها الذي يزداد عدده و تزداد ثقته فيها كفنانة تتميز بصوت آسر و متفرّد. 
+			يمّا" فعزفت اوركسترا هلال تطوان أعذب الألحان بقيادة المايسترو بن براهيم.</p>
 
-			<p>Ibi victu recreati et quiete, postquam abierat timor, vicos opulentos adorti equestrium adventu cohortium, quae casu propinquabant, nec resistere planitie porrecta conati digressi sunt retroque concedentes omne iuventutis robur relictum in sedibus acciverunt.</p>
+			<p>و " لمغاري الله "فتح كالفنان كبيرة فنية أسماء إعجاب فاتنحصدت   بمدينة الفنية المهرجانات إحدى شاركته الذي الحياني محمد الراحل
+			 سميح نعيمة و رأفت لطيفة الفنانة غرار على  العصرية للأغنية ستضيف صاعدة كفنانة موهبتها على أثنى والخميسات،  بنسعيد. سميرة و 
+			  صوب فاتجهت الإنتاج، شركات بفكرة اقتنعت أن إلى بالفشل، محاولاتها لمبتغاها،فباءت "فاتن" الفنانة وصول دون المادية الظروفحالت
+			الأغنية الشعبية.</p>
 
-			<p>Nec sane haec sola pernicies orientem diversis cladibus adfligebat. Namque et Isauri, quibus est usitatum saepe pacari saepeque inopinis excursibus cuncta miscere, ex latrociniis occultis et raris, alente inpunitate adulescentem in peius audaciam ad bella gravia proruperunt, diu quidem perduelles spiritus inrequietis motibus erigentes, hac tamen indignitate perciti vehementer, ut iactitabant, quod eorum capiti quidam consortes apud Iconium Pisidiae oppidum in amphitheatrali spectaculo feris praedatricibus obiecti sunt praeter morem.</p>
+			<p>السنين. هذه مر على المغاربة أذهان في راسخة وظلت الإعجاب لاقت أسطورية بأغنية الفنية، مسيرتها فاتن" " الفنانةخلدت                         
+			  "العظمةأغنية   لمدينة الشعبية الفنون " الإنتاج شركة مع  البيضاء بالدار بتسجيلها وقامت فاتن"، " الفنانة تلحين و تأليف من منّوش"ما
+			  سنة في إصدارها تم " منّوش ما العظمةالخميسات"."1987  خاصة العالمي الصعيد على و المغرب في النظير منقطع نجاحا حققت،
+			المغاربي و في دول الخليج العربي.
+			</p>
 
-			<p>Paphius quin etiam et Cornelius senatores, ambo venenorum artibus pravis se polluisse confessi, eodem pronuntiante Maximino sunt interfecti. pari sorte etiam procurator monetae extinctus est. Sericum enim et Asbolium supra dictos, quoniam cum hortaretur passim nominare, quos vellent, adiecta religione firmarat, nullum igni vel ferro se puniri iussurum, plumbi validis ictibus interemit. et post hoe flammis Campensem aruspicem dedit, in negotio eius nullo sacramento constrictus.</p>
+			<p>إنتاجات كل تهدد و هددت التي للقرصنة واسعا المجال فترك للأغنية الجيد التوزيع من المنتجة الشركة تمكّن دون حالت الفنية السوقمتطلبات
+ 			 عامة. بصفةالفنانين   العسري،سيف لمريني، رشيد ريموند، ميلودة، بأدائها: فقاموا منّوش" ما العظمة " أغنية إستهوتهم كثرفنانون         
+			و اخرون .....</p>
 
-			<p>Et quoniam mirari posse quosdam peregrinos existimo haec lecturos forsitan, si contigerit, quamobrem cum oratio ad ea monstranda deflexerit quae Romae gererentur, nihil praeter seditiones narratur et tabernas et vilitates harum similis alias, summatim causas perstringam nusquam a veritate sponte propria digressurus.</p>
+			<p>هناك. تستقر و بلجيكا في لتتوقف عديدة لبلدان اخذتها فنية بجولة فاتن" " الفنانةقامت   لتبحر دراستها فاتن" " أتممت الفن، معبالموازات
+			  مستشفى في المسنين الأشخاص ترعى فهي ، هذا يومنا الى و ، الآخرين مساعدة تحب ، وكريمة متواضعة كإنسانة الاجتماعي الميدانفي
+			للأمراض العصبية،و هي أيضاً أم  لثلاثة أطفال ( ولدين و بنت).
+			</p>
 
-			<p>Quis enim aut eum diligat quem metuat, aut eum a quo se metui putet? Coluntur tamen simulatione dumtaxat ad tempus. Quod si forte, ut fit plerumque, ceciderunt, tum intellegitur quam fuerint inopes amicorum. Quod Tarquinium dixisse ferunt, tum exsulantem se intellexisse quos fidos amicos habuisset, quos infidos, cum iam neutris gratiam referre posset.</p>
+			<p>إقناع أجل من بالنجاح تكللت الأصدقاء، الفنانين و المقربين و العائلة ومحاولات الفنية، الساحة عن سنة عشرين "فاتن" غابت عنها،رغما
+			"فاتن" للعودة إلى المجال الفني.
+			</p>
 
-			<p>Cum haec taliaque sollicitas eius aures everberarent expositas semper eius modi rumoribus et patentes, varia animo tum miscente consilia, tandem id ut optimum factu elegit: et Vrsicinum primum ad se venire summo cum honore mandavit ea specie ut pro rerum tunc urgentium captu disponeretur concordi consilio, quibus virium incrementis Parthicarum gentium a arma minantium impetus frangerentur.</p>
+			<p>مارس شهر في مامنوش"، العظمة " الأسطورة أغنيتها إطلاق و تجديدبعد2015  و بوعدها تفي الخميسات؛ بجوهرة الملقبة بنعكيدة فاتن ؛
+			تطلق جديدها سد الباب.
+			</p>
 
-			<p>Quis enim aut eum diligat quem metuat, aut eum a quo se metui putet? Coluntur tamen simulatione dumtaxat ad tempus. Quod si forte, ut fit plerumque, ceciderunt, tum intellegitur quam fuerint inopes amicorum. Quod Tarquinium dixisse ferunt, tum exsulantem se intellexisse quos fidos amicos habuisset, quos infidos, cum iam neutris gratiam referre posset.</p>
+			<p>الأغنية التي مدتها 3 دقائق و 50 ثانية، من كلمات و ألحان الفنان المقتدر عماد المغربي و من توزيع بدر المخلوقي.
+			</p>
 
-			<p>Eodem tempore Serenianus ex duce, cuius ignavia populatam in Phoenice Celsen ante rettulimus, pulsatae maiestatis imperii reus iure postulatus ac lege, incertum qua potuit suffragatione absolvi, aperte convictus familiarem suum cum pileo, quo caput operiebat, incantato vetitis artibus ad templum misisse fatidicum, quaeritatum expresse an ei firmum portenderetur imperium, ut cupiebat, et cunctum.</p>
+			<p>، الواقعففي البابسد  الجدد محبيها و القديم جمهورها لإرضاء فاتن الفنانة حضرتها ؛ الجديدة الأغاني من لسلسلة  افتتاح أغنية هي
+			والسماح لها للتألق في سماء الأغنية المغربية ..
+			</p>
+
+			<p>المرحلة الموالية و السينجل القادم تخصصهم الفنانة فاتن بنعكيدة لمسقط رأسها و ستكون الأغنية عبارة عن صرخة تكريمية .
+			</p>
+
+			<?php } else { ?>
+
+			<h2 style="color: #d14e3d;">Fatine BENAGUIDA : Le joyau de la ville de Khemisset , la fierté de la région l'Atlas et de tout un Pays .</h2>
+			<p>Fatima Zahra BENAGUIDA , native de la ville de Khemisset le coeur palpitant de la région de l'Atlas , ville connue par la générosité et l'intégrité de ses citoyens .</p>
+
+			<p>Elle est née le 05 Mars 1966. Elle a découvert ses premières forces de cordes vocales à travers la lecture coranique à son très jeune âge.</p>
+
+			<p>Puis à travers des activités parascolaires ; comme le théâtre et le chant, sa vocation artistique se confirme petit à petit,   surtout avec de grandes interprétations à des classiques de <b>Oum Kalthoum</b>,  de <b>Fairouz</b>, de <b>Warada</b>  ...</p>
+
+			<p>Les fêtes nationales , les concours .. Rien ne lui échappe ... Des fois déçue par les résultats mais souvent agréablement surprise par l'amour d'un public qui commence peu à peu à réclamer sa voix distinguée.</p>
+
+			<p>Sa première intervention à la radio à l’émission « Adwaa Al Madina » avec <b>Mr. Driss TADILI</b> et où elle a interprété « Li Sabr Hdoud » Vient après, Son premier  passage à la télévision marocaine à l'émission «  kafilat tanmya » , où elle a interprété la chanson « Ana faarak ya yamma » de l'artiste <b>Latifa Raafat</b> . Une interprétation remarquable appuyée par l'orchestration inédite de l'orchestre « al hilal de tetouan » , dirigé à l’époque  par le Maestro BENBRAHIM ;  et amplement appréciée par   de  grands    noms   de   la   chanson   marocaine   comme    <b>Mr. Fathallah LAMGHARI</b>.</p>
+
+			<p>Aussi, le témoignage du défunt <b>Mohamed El Hyani</b> , avec qui , elle a partagé la Scène d'un festival à la ville de Khemisset , lui a confirmé son talent et sa détermination pour l'évolution dans la chanson marocaine moderne suivant la voix de <b>Naima SAMIH , Latefa RAAFAT, Samira SAID ...</b></p>
+
+			<p>Mais pour des raisons financières suite à une séparation parentale, et sans trop le vouloir , Fatima se retrouve dans l'engrenage des producteurs , qui après plusieurs tentatives finissent par la convaincre de mettre sa voix au service de la chanson populaire. Ainsi est née la chanson mythique <b>« Al adama Mamennouch »</b>, écrite et composée par l'artiste même et enregistrée à Casablanca avec la société de production <b>« AL FOUNOUN CHAABYA LI MADINAT AL KHEMISSET »</b>.</p>
+
+			<p>« Al Adama Mamennouch » , en 1986 , a réalisé un succès sans précédent au Maroc et à l’échelon international ; surtout dans le Maghreb et les pays du Golf .</p>
+
+			<p>Ne pouvant plus suivre le rythme de la demande du marché, le producteur de la chanson, néglige les commandes des distributeurs et laisse la place au piratage pour combler cet engouement.</p>
+
+			<p>Plusieurs autres artistes ont repris ce best-seller : Milouda, Raymond, Rachid LAMRINI, LAASRI, SEIF, et bien d'autres ...</p>
+
+			<p>Fatima BENAGUIDA, commence ainsi une tournée de concerts internationale, et s'arrête en Belgique pour s'y installer.</p>
+
+			<p>En parallèle avec l'art, elle refait ses études et se lance dans le social, qui lui permet d'exprimer sur le terrain sa générosité, son amour et son assistance ;  A ce jour elle exerce toujours son boulot d'aide-soignante dans un hôpital psychiatrique pour les personnes âgées.</p>
+
+			<p>Elle décide également de fonder une famille et vivre amplement son rôle d'épouse et de maman de 3 enfants (2 garçons et une fille).</p>
+
+			<p>20 ans d'absence, à contre coeur , et après l'approbation de la famille et la persistance des amis artistes et des proches , Fatima alias Fatine BENAGUIDA revient en Force et revoit son tube , le ré-enregistre avec de nouvelles paroles  et une nouvelle réorchestration ; une collaboration fructueuse avec Taoufik ABOU ZOUHEIR et Morad EL GZANAY .</p>
+
+			<p>AL ADAMA MAMENNOUCH est un retour logique du joyau au bercail.</p>
+
+			<p>Un tout pour lui permettre de tracer sa vraie carrière dans la chanson marocaine moderne ;  ainsi rêvée dès son jeune âge.</p>
+
+			<p>ANSI AL ADAMA MAMENNOUCH lancée en mars 2015 , l’artiste retrouve goût à la production et enregistre une série de nouvelles chansons . La plus récente est SAD AL BAB , une chanson de 3’50 , écrite et composée par Imad AL MAGHRIBI et arrangée par Badr EL MAKHLOUKI.</p>	
+
+			<p>Aussi , la prochaine étape est sous forme d’un cri exceptionnel qui rend hommage à sa ville natale … A suivre !!!</p>
+			<?php } ?>
+
+
 		</div>
 		<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
 			<div class="Rsocial col-lg-12">
+				<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+				<ul class="exemple ex1 righttoleft">
+					<h3 class="col-lg-5 col-xs-4 suivez-nous"> تابعنا على :</h3>
+					<a id="fb" href=""><li class="col-lg-1"><img src="images/facebook.png" /></li></a>
+					<a id="twitter" href=""><li class="col-lg-1"><img src="images/twitter.png" /></li></a>
+					<a id="youtube" href=""><li class="col-lg-1"><img src="images/youtube.png" /></li></a>
+					<a id="gplus" href=""><li class="col-lg-1"><img src="images/instagram.png" /></li></a>
+				</ul>
+				<?php } else { ?>
 				<ul class="exemple ex1">
 					<h3 class="col-lg-5 col-xs-4">SUIVEZ NOUS:</h3>
 					<a id="fb" href=""><li class="col-lg-1"><img src="images/facebook.png" /></li></a>
@@ -34,7 +123,32 @@
 					<a id="youtube" href=""><li class="col-lg-1"><img src="images/youtube.png" /></li></a>
 					<a id="gplus" href=""><li class="col-lg-1"><img src="images/instagram.png" /></li></a>
 				</ul>
+				<?php } ?>
 			</div>
 		</div>
 	</div>
 </section>
+
+
+<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+<style type="text/css">
+h3, .about p {
+	font-family: 'DroidKufi-Bold.ttf';
+}
+
+.ticket-rub {
+    text-align: left;
+    float: left;
+    margin-left: -30px;
+}
+
+.title-rub {
+    text-align: right;
+    margin-right: -30px;
+    float: right;
+}
+
+.suivez-nous { float: right;}
+
+</style>
+<?php } ?>
