--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -36,7 +36,7 @@
 	<div class="black-box col-lg-10 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
 		<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
 		<div class="rub">
-			<a href="discographie"><h3 class="col-lg-4 ticket-rub"><span>+ المزيد &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
+			<a href="discographie?lang=AR-ar"><h3 class="col-lg-4 ticket-rub"><span>+ المزيد &nbsp;&nbsp;<img src="images/arrow-ar.png" /></span></h3></a>
 			<h3 class="col-lg-8 col-xs-6  title-rub">موسيقى</h3>
 		</div>
 		<?php } else { ?>
@@ -67,8 +67,8 @@
 	<div class="black-box col-lg-10 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
 		<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
 		<div class="rub">
-			<h3 class="col-lg-8 col-xs-6  title-rub">فيديو</h3>
-			<a href="videos"><h3 class="col-lg-4 ticket-rub"><span>+ المزيد &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
+			<h3 class="col-lg-8 col-xs-6  title-rub">فيديوهات</h3>
+			<a href="videos?lang=AR-ar"><h3 class="col-lg-4 ticket-rub"><span>+ المزيد &nbsp;&nbsp;<img src="images/arrow-ar.png" /></span></h3></a>
 		</div>
 		<?php } else { ?>
 		<div class="rub">
@@ -97,7 +97,7 @@
 		<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
 		<div class="rub">
 			<h3 class="col-lg-8 col-xs-6  title-rub">صور</h3>
-			<a href="radios"><h3 class="col-lg-4 ticket-rub"><span>+ المزيد &nbsp;&nbsp;<img src="images/arrow.png" /></span></h3></a>
+			<a href="radios?lang=AR-ar"><h3 class="col-lg-4 ticket-rub"><span>+ المزيد &nbsp;&nbsp;<img src="images/arrow-ar.png" /></span></h3></a>
 		</div>
 		<?php } else { ?>
 		<div class="rub">
