--- a/application/views/scripts/contact/index.phtml
+++ b/application/views/scripts/contact/index.phtml
@@ -111,35 +111,82 @@
 
 <section  class="container container-website col-lg-10 col-lg-offset-1">
 	<div class="black-box col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
+		<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
 		<div class="rub">
-			<h3 class="col-lg-12 title-rub">CONTACTEZ-NOUS</h3>
+			<h3 class="col-lg-12 title-rub">تواصل معنا</h3>
 		</div>
+		<?php } else { ?>
+		<div class="rub">
+			<h3 class="col-lg-12 title-rub">CONTACTEZ NOUS</h3>
+		</div>
+		<?php } ?>
 	</div>
 	<div id="form-style" class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1" style="">
 		<form id="contact-form" class="form-contact" enctype="multipart/form-data">
 	        <span class="col-lg-6 col-md-6 col-xs-12">
+	        	<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+	        	<p>الاسم *</p>
+	        	<?php } else { ?>
 	        	<p>VOTRE NOM *</p>
+	        	<?php } ?>
 	        	<input type="text" id="nom" name="name" >
 	        </span>
 	        <span class="col-lg-6 col-md-6 col-xs-12">
-	        	<p>VOTRE EMAIL *</p>
+	        	<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+	        	<p>البريد الالكتروني *</p>
+	        	<?php } else { ?>
+	        	<p>VOTRE NOM *</p>
+	        	<?php } ?>
 	        	<input type="text" id="mail" name="email">
 	        </span>
 	        <span class="col-lg-6 col-md-6 col-xs-12">
-	        	<p>SUJET *</p>
+	        	<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+	        	<p>الموضوع *</p>
+	        	<?php } else { ?>
+	        	<p>VOTRE NOM *</p>
+	        	<?php } ?>
 	        	<input type="text" id="nom" name="subject" >
 	        </span>
 	        <span class="col-lg-6 col-md-6 col-xs-12">
-	        	<p>VOTRE NUMERO DU TELEPHONE *</p>
+	        	<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+	        	<p>رقم الهاتف *</p>
+	        	<?php } else { ?>
+	        	<p>VOTRE NOM *</p>
+	        	<?php } ?>
 	        	<input type="text" id="mail" name="numtel">
 	        </span>
 	        <span class="col-lg-12 col-md-12 col-xs-12">
-	        	<p>VOTRE MESSAGE *</p>
+	        	<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+	        	<p>الرسالة *</p>
+	        	<?php } else { ?>
+	        	<p>VOTRE NOM *</p>
+	        	<?php } ?>
 	        	<textarea rows="10" name="message"></textarea>
 	        </span>
 	        <span class="valider col-lg-12 col-md-12 col-xs-10 col-xs-offset-1" style="margin-bottom: 60px;">
+				<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+				<span class="col-lg-4  col-xs-12 col-md-4 col-lg-offset-4 col-md-offset-4" ><input type="submit" id="submit" value="ارسال" style="font-size: 20px;" /></span>
+				<?php } else { ?>
 				<span class="col-lg-4  col-xs-12 col-md-4 col-lg-offset-4 col-md-offset-4" ><input type="submit" id="submit" value="ENVOYER" /></span>
+	        	<?php } ?>
 			</span>
     	</form>
 	</div>
 </section>
+
+<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+<style type="text/css">
+.ticket-rub {
+    text-align: left;
+    float: left;
+    margin-left: -30px;
+}
+
+.title-rub {
+    text-align: right;
+    margin-right: -30px;
+    float: right;
+}
+
+</style>
+<?php } ?>			
