--- a/application/views/scripts/videos/index.phtml
+++ b/application/views/scripts/videos/index.phtml
@@ -1,9 +1,15 @@
 
 <section  class="container container-website col-lg-10 col-lg-offset-1">
 	<div class="black-box col-lg-10 col-lg-offset-1">
+		<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+		<div class="rub">
+			<h3 class="col-lg-12 title-rub">فيدوهات</h3>
+		</div>
+		<?php } else { ?>
 		<div class="rub">
 			<h3 class="col-lg-12 title-rub">VIDEOS</h3>
 		</div>
+		<?php } ?>
 	</div>
 
 	<div class="col-lg-10 col-lg-offset-1 videos" style="padding: 0px; margin-bottom: 60px;">
@@ -16,4 +22,20 @@
 		<iframe width="100%" src="https://www.youtube.com/embed/bPsBRsC2s0M" frameborder="0" allowfullscreen></iframe> -->
 	</div>
 </section>
+<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
+<style type="text/css">
+.ticket-rub {
+    text-align: left;
+    float: left;
+    margin-left: -30px;
+}
+
+.title-rub {
+    text-align: right;
+    margin-right: -30px;
+    float: right;
+}
+
+</style>
+<?php } ?>	
 
