--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -65,7 +65,9 @@
 		</style>
 		<nav class="col-lg-10 col-lg-offset-1 navbar navbar-default modif1">
 	      <div class="container" id="div-title" style="">
-	        <div class="col-lg-12">
+	        <div class="col-lg-12 center-header  
+	        	<?= (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) ? 'arab' : 'french' ?>
+	        	">
 		        <div class="logo-title">
 		        	<?php //if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
 		        	<!-- <a href="/projects/fatine-blog/public/"><span style="font-family: BebasNeue;">فاتن بنعكيدة</span></a> -->
@@ -82,7 +84,7 @@
 		          </button> 
 		        </div>
 		        <?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
-			        <div id="navbar" class="navbar-collapse collapse-in collapse col-lg-6 col-lg-offset-3">
+			        <div id="navbar" class="navbar-collapse collapse-in collapse col-lg-6 col-xs-12">
 			            <ul id="main-menu" class="nav navbar-nav main-menu-ar" >
 							<li class="<?= $this->contact ?>"><a href="contact?lang=AR-ar">تواصل&nbsp;&nbsp;&nbsp;معنا</a></li>
 							<li><a href="event?lang=AR-ar">أحداث</a></li>
@@ -107,7 +109,7 @@
 						</ul>
 					</div><!--/.nav-collapse -->
 				<?php } else { ?>
-				<div id="navbar" class="navbar-collapse collapse-in collapse col-lg-8 col-lg-offset-2">
+				<div id="navbar" class="navbar-collapse collapse-in collapse col-lg-8 col-xs-12">
 					<ul id="main-menu" class="nav navbar-nav " >
 						<li class="<?= $this->home ?>"><a href="/projects/fatine-blog/public/">Accueil</a></li>
 						<li class="<?= $this->about ?>"><a href="about">Biographie</a></li>
