--- a/application/views/scripts/about/index.phtml
+++ b/application/views/scripts/about/index.phtml
@@ -14,55 +14,36 @@
 		<div class="about">
 			<img src="images/biographie.jpg" width="100%"/>
 			<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
-			<h2 style="direction: rtl !important; color: #d14e3d;">."فاتن بنعكيدة"  جوهرة مدينة الخميسات و مفخرة منطقة الأطلس و البلد بأكمله</h2>
-			<p>الطموح، المثابرة و الإصرار على النجاح، ثلاثية  كانت دعامة الفنانة "فاتن" لتحقيق طموحاتها في الحياة.</p>
-			<p>	فاطمة الزهراء بنعكيدا هو إسمها الحقيقي، فنانة مغربية الأصل والهوية ولدت وترعرعت بمدينة الخميسات  القلب النابض لمنطقة الأطلس. 
-			  في النّور،رأت5  الأنشطة خلال من ثم أظافرها... نعومة منذ قرآنية  لآيات ترتيلها خلال من الصوتية قدراتها أولى اكتشفت  ، مارس
-			المدرسية: المسرح، الغناء.....احترافها للفن يظهر شيئا فشيئا، خاصة عند أدائها لأغاني عمالقة الفن: أم كلثوم، فيروز، وردة... 
-			  و أحيانا الإحباط يلازمها فيه، تشارك أن دون الكرام مرور يمر فاتن" تتركه" القبيل هذا من شيئ لا فنية.. مسابقات أو حفلات أكانتسواء
+			<h2 style="direction: rtl !important; color: #d14e3d;">"فاتن بنعكيدة" جوهرة مدينة الخميسات و مفخرة منطقة الأطلس و البلد بأكمله.</h2>
+			<p style="text-indent: 40px; color: #ffe55e; margin-bottom: -20px;">الطموح، المثابرة و الإصرار على النجاح، ثلاثية  كانت دعامة الفنانة "فاتن" لتحقيق طموحاتها في الحياة.</p>
+			<p>فاطمة الزهراء بنعكيدا هو إسمها الحقيقي، فنانة مغربية الأصل والهوية ولدت وترعرعت بمدينة الخميسات  القلب النابض لمنطقة الأطلس. 
+			رأت النّور، في 5 مارس ،  اكتشفت أولى قدراتها الصوتية من خلال ترتيلها لآيات  قرآنية منذ نعومة أظافرها... ثم من خلال الأنشطة المدرسية: المسرح، الغناء.....احترافها للفن يظهر شيئا فشيئا، خاصة عند أدائها لأغاني عمالقة الفن: أم كلثوم، فيروز، وردة... 
+			سواء أكانت حفلات أو مسابقات فنية.. لا شيئ من هذا القبيل تتركه" فاتن" يمر مرور الكرام دون أن تشارك فيه، يلازمها الإحباط أحيانا و لكن الفرح يكون سيد الموقف، لتتفاجأ بجمهورها الذي يزداد عدده و تزداد ثقته فيها كفنانة تتميز بصوت آسر و متفرّد. 
 			برنامج "أضواء المدينة "الذي قدمه "إدريس التاديلي"،كان أول فرصة لها لإسماع صوتها فغنت "للصبر حدود" لكوكب الشرق أم كلثوم . 
-			  يا عارك في أغنيتها"أنا رأفت لطيفة للفنانة غنت ، معجبيها دائرة من لتوسِّع "لفاتن" أخرى فرصة  التنمية" قافلة " التلفزي البرنامجكان
-			لكن الفرح يكون سيد الموقف، لتتفاجأ بجمهورها الذي يزداد عدده و تزداد ثقته فيها كفنانة تتميز بصوت آسر و متفرّد. 
-			يمّا" فعزفت اوركسترا هلال تطوان أعذب الألحان بقيادة المايسترو بن براهيم.</p>
-
-			<p>و " لمغاري الله "فتح كالفنان كبيرة فنية أسماء إعجاب فاتنحصدت   بمدينة الفنية المهرجانات إحدى شاركته الذي الحياني محمد الراحل
-			 سميح نعيمة و رأفت لطيفة الفنانة غرار على  العصرية للأغنية ستضيف صاعدة كفنانة موهبتها على أثنى والخميسات،  بنسعيد. سميرة و 
-			  صوب فاتجهت الإنتاج، شركات بفكرة اقتنعت أن إلى بالفشل، محاولاتها لمبتغاها،فباءت "فاتن" الفنانة وصول دون المادية الظروفحالت
-			الأغنية الشعبية.</p>
-
-			<p>السنين. هذه مر على المغاربة أذهان في راسخة وظلت الإعجاب لاقت أسطورية بأغنية الفنية، مسيرتها فاتن" " الفنانةخلدت                         
-			  "العظمةأغنية   لمدينة الشعبية الفنون " الإنتاج شركة مع  البيضاء بالدار بتسجيلها وقامت فاتن"، " الفنانة تلحين و تأليف من منّوش"ما
-			  سنة في إصدارها تم " منّوش ما العظمةالخميسات"."1987  خاصة العالمي الصعيد على و المغرب في النظير منقطع نجاحا حققت،
-			المغاربي و في دول الخليج العربي.
+			كان البرنامج التلفزي " قافلة التنمية"  فرصة أخرى "لفاتن" لتوسِّع من دائرة معجبيها ، غنت للفنانة لطيفة رأفت أغنيتها"أنا في عارك يا يمّا" فعزفت اوركسترا هلال تطوان أعذب الألحان بقيادة المايسترو بن براهيم. 
 			</p>
 
-			<p>إنتاجات كل تهدد و هددت التي للقرصنة واسعا المجال فترك للأغنية الجيد التوزيع من المنتجة الشركة تمكّن دون حالت الفنية السوقمتطلبات
- 			 عامة. بصفةالفنانين   العسري،سيف لمريني، رشيد ريموند، ميلودة، بأدائها: فقاموا منّوش" ما العظمة " أغنية إستهوتهم كثرفنانون         
-			و اخرون .....</p>
+			<p>حصدت فاتن إعجاب أسماء فنية كبيرة كالفنان "فتح الله لمغاري " و الراحل محمد الحياني الذي شاركته إحدى المهرجانات الفنية بمدينة الخميسات، و أثنى على موهبتها كفنانة صاعدة ستضيف للأغنية العصرية  على غرار الفنانة لطيفة رأفت و نعيمة سميح و سميرة بنسعيد.حالت الظروف المادية دون وصول الفنانة "فاتن" لمبتغاها،فباءت محاولاتها بالفشل، إلى أن اقتنعت بفكرة شركات الإنتاج، فاتجهت صوب الأغنية الشعبية. </p>
 
-			<p>هناك. تستقر و بلجيكا في لتتوقف عديدة لبلدان اخذتها فنية بجولة فاتن" " الفنانةقامت   لتبحر دراستها فاتن" " أتممت الفن، معبالموازات
-			  مستشفى في المسنين الأشخاص ترعى فهي ، هذا يومنا الى و ، الآخرين مساعدة تحب ، وكريمة متواضعة كإنسانة الاجتماعي الميدانفي
-			للأمراض العصبية،و هي أيضاً أم  لثلاثة أطفال ( ولدين و بنت).
-			</p>
+			<p>خلدت الفنانة " فاتن" مسيرتها الفنية، بأغنية أسطورية لاقت الإعجاب وظلت راسخة في أذهان المغاربة على مر هذه السنين.أغنية "العظمة ما منّوش" من تأليف و تلحين الفنانة " فاتن"، وقامت بتسجيلها بالدار البيضاء  مع شركة الإنتاج " الفنون الشعبية لمدينة الخميسات"." العظمة ما منّوش " تم إصدارها في سنة 1987، حققت نجاحا منقطع النظير في المغرب و على الصعيد العالمي خاصة المغاربي و في دول الخليج العربي.</p>
 
-			<p>إقناع أجل من بالنجاح تكللت الأصدقاء، الفنانين و المقربين و العائلة ومحاولات الفنية، الساحة عن سنة عشرين "فاتن" غابت عنها،رغما
-			"فاتن" للعودة إلى المجال الفني.
-			</p>
+			<p>إمتطلبات السوق الفنية حالت دون تمكّن الشركة المنتجة من التوزيع الجيد للأغنية فترك المجال واسعا للقرصنة التي هددت و تهدد كل إنتاجات الفنانين بصفة عامة. فنانون كثر إستهوتهم أغنية " العظمة ما منّوش" فقاموا بأدائها: ميلودة، ريموند، رشيد لمريني، العسري،سيف و اخرون .....</p>
 
-			<p>مارس شهر في مامنوش"، العظمة " الأسطورة أغنيتها إطلاق و تجديدبعد2015  و بوعدها تفي الخميسات؛ بجوهرة الملقبة بنعكيدة فاتن ؛
-			تطلق جديدها سد الباب.
-			</p>
+			<p>قامت الفنانة " فاتن" بجولة فنية اخذتها لبلدان عديدة لتتوقف في بلجيكا و تستقر هناك.بالموازات مع الفن، أتممت " فاتن" دراستها لتبحر في الميدان الاجتماعي كإنسانة متواضعة وكريمة ، تحب مساعدة الآخرين ، و الى يومنا هذا ، فهي ترعى الأشخاص المسنين في مستشفى للأمراض العصبية،و هي أيضاً أم  لثلاثة أطفال ( ولدين و بنت).</p>
 
-			<p>الأغنية التي مدتها 3 دقائق و 50 ثانية، من كلمات و ألحان الفنان المقتدر عماد المغربي و من توزيع بدر المخلوقي.
-			</p>
+			<p>رغما عنها، غابت "فاتن" عشرين سنة عن الساحة الفنية، ومحاولات العائلة و المقربين و الفنانين الأصدقاء، تكللت بالنجاح من أجل إقناع "فاتن" للعودة إلى المجال الفني.</p>
 
-			<p>، الواقعففي البابسد  الجدد محبيها و القديم جمهورها لإرضاء فاتن الفنانة حضرتها ؛ الجديدة الأغاني من لسلسلة  افتتاح أغنية هي
-			والسماح لها للتألق في سماء الأغنية المغربية ..
-			</p>
+			<p>أعادت فاتن أداء أغنية *العظمة مامنوش*  و قامت بتسجيلها بتوزيع يتماشى مع السوق الحالية بتعاون مثمر مع الكاتب توفيق أبو زهير و الملحن والموزع مراد الكزناي، فكانت  العودة قوية . 	</p>
 
-			<p>المرحلة الموالية و السينجل القادم تخصصهم الفنانة فاتن بنعكيدة لمسقط رأسها و ستكون الأغنية عبارة عن صرخة تكريمية .
-			</p>
+			<p>العظمة ما منّوش عودة منطقية لأغنية تركت بصمتها في المجال الفني، "فاتن بن عكيدة" لن تتوقف عند هذا الحد، مفاجاءات كثيرة تعد بها جمهورها، لتشق طريقها في ميدان الأغنية المغربية العصرية، و تحقق بذلك حلم الطفولة.</p>
 
+			<p>بعد تجديد و إطلاق أغنيتها الأسطورة " العظمة مامنوش"، في شهر مارس 2015 ؛ فاتن بنعكيدة الملقبة بجوهرة الخميسات؛ تفي بوعدها و تطلق جديدها سد الباب.</p>
+
+			<p>الأغنية التي مدتها 3 دقائق و 50 ثانية، من كلمات و ألحان الفنان المقتدر عماد المغربي و من توزيع بدر المخلوقي.</p>
+
+			<p>ففي الواقع ، سد الباب هي أغنية افتتاح  لسلسلة من الأغاني الجديدة ؛ حضرتها الفنانة فاتن لإرضاء جمهورها القديم و محبيها الجدد والسماح لها للتألق في سماء الأغنية المغربية</p>
+
+			<p>المرحلة الموالية و السينجل القادم تخصصهم الفنانة فاتن بنعكيدة لمسقط رأسها و ستكون الأغنية عبارة عن صرخة تكريمية .</p>
 			<?php } else { ?>
 
 			<h2 style="color: #d14e3d;">Fatine BENAGUIDA : Le joyau de la ville de Khemisset , la fierté de la région l'Atlas et de tout un Pays .</h2>
@@ -132,8 +113,13 @@
 
 <?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
 <style type="text/css">
+@font-face {
+	src: url('fonts/ae_Hani.ttf') format('ttf');
+	font-family: 'ae_Hani' ;
+}
+
 h3, .about p {
-	font-family: 'DroidKufi-Bold.ttf';
+	font-family: 'ae_Hani' ;
 }
 
 .ticket-rub {
