--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -133,6 +133,9 @@
 
 <?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
 <style type="text/css">
+h3, .about p {
+	font-family: 'DroidKufi-Bold.ttf';
+}
 .ticket-rub {
     text-align: left;
     float: left;
