--- a/application/views/scripts/radios/index.phtml
+++ b/application/views/scripts/radios/index.phtml
@@ -51,6 +51,9 @@
 	</script>
 	<?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
 	<style type="text/css">
+	h3, .about p {
+	font-family: 'DroidKufi-Bold.ttf';
+}
 	.ticket-rub {
 	    text-align: left;
 	    float: left;
