--- a/application/views/scripts/videos/index.phtml
+++ b/application/views/scripts/videos/index.phtml
@@ -24,6 +24,11 @@
 </section>
 <?php if (isset($_GET["lang"]) && $_GET["lang"] == "AR-ar" ) { ?>
 <style type="text/css">
+
+h3, .about p {
+	font-family: 'DroidKufi-Bold.ttf';
+}
+
 .ticket-rub {
     text-align: left;
     float: left;
